tests/fixtures/invalid/unclosed-group.csil
; Invalid: unclosed group
person = {
  name: text,
  age: int